# Python-RegelRytteren

./: .gitignore  README.md  config.yml  fetch_location_data.py  main.py  optimize_routes.py  pyproject.toml  sandbox.py
robot_framework/: config.py  process.py  queue_framework.py  reset.py
