[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 10.*",
    "requests == 2.32.3",
    "numpy == 2.2.4",
    "pandas == 2.2.3",
    "matplotlib == 3.10.1",
    "ortools == 9.12.4544",
    "selenium == 4.30.0",
    "pyproj == 3.7.1",
    "regex == 2024.11.6"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
